2007-08-10  Albert Chu <chu11@llnl.gov>

	* common/src/tool-common.h, common/src/tool-common.c
	(check_kg_len): New function.

	* common/src/cmdline-parse-common.c, ipmipower/, ipmiconsole/,
	ipmimonitoring/: Use check_kg_len function appropriately for k_g
	len checks.
	
2007-08-09  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/ipmiconsole.h: Add additional comments.

	* common/src/tool-common.c (parse_kg): Check for proper inputted
	hex digits.  Alter function to return k_g key length.

	* ipmipower/, bmc-config/, ipmiconsole/, common/src: Adjust tools
	for use of new parse_kg function and do not assume k_g key of
	length 20.
	
	* ipmipower/src/ipmipower_config.c (_cb_k_g): Fix configuration
	logic error.

        * ipmipower/src/ipmipower_prompt.c (_cmd_config): Fix config
        output display error.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
        (ipmiconsole_engine_submit): Move blocking support from parameter
	to flag in protocol_config of the context.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_teardown),
	ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(ipmiconsole_engine_cleanup): Add option to not cleanup SOL
	sessions on engine teardown.

	* ipmiconsole/src/ipmiconsole/ipmiconsole.c: Adjust for API
	change.

	* ipmiconsole/src/libipmiconsole/: Rename BMC_SETTINGS_INVALID to
	INTERNAL_BMC_SETTINGS_INVALID.

	* doc/freeipmi-libraries.txt: Update.
	
2007-08-08  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(ipmiconsole_engine_cleanup): Skip majority of code if engine was
	never initialized.

	* ipmiconsole/src/ipmiconsole/ipmiconsole.c (main): Cleanup use of
	ipmiconsole_ctx_destroy() so use is easier to understand.
	
	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c: Create