@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmiconsole.h,v 1.28 2007-08-10 00:12:45 chu11 Exp $
+ *  $Id: ipmiconsole.h,v 1.29 2007-08-10 16:39:23 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2006 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -54,19 +54,18 @@ extern "C" {
 #define IPMICONSOLE_ERR_PRIVILEGE_LEVEL_CANNOT_BE_OBTAINED 17
 #define IPMICONSOLE_ERR_SOL_UNAVAILABLE                    18
 #define IPMICONSOLE_ERR_SOL_INUSE                          19
-#define IPMICONSOLE_ERR_SOL_NOT_RESPONDING                 20
-#define IPMICONSOLE_ERR_SOL_STOLEN                         21
-#define IPMICONSOLE_ERR_SOL_REQUIRES_ENCRYPTION            22
-#define IPMICONSOLE_ERR_SOL_REQUIRES_NO_ENCRYPTION         23
-#define IPMICONSOLE_ERR_BMC_BUSY                           24
-#define IPMICONSOLE_ERR_BMC_ERROR                          25
-#define IPMICONSOLE_ERR_INTERNAL_BMC_SETTINGS_INVALID      26
-#define IPMICONSOLE_ERR_SESSION_TIMEOUT                    27
-#define IPMICONSOLE_ERR_EXCESS_RETRANSMISSIONS             28
-#define IPMICONSOLE_ERR_OUT_OF_MEMORY                      29
-#define IPMICONSOLE_ERR_SYSTEM_ERROR                       30
-#define IPMICONSOLE_ERR_INTERNAL_ERROR                     31
-#define IPMICONSOLE_ERR_ERRNUMRANGE                        32
+#define IPMICONSOLE_ERR_SOL_STOLEN                         20
+#define IPMICONSOLE_ERR_SOL_REQUIRES_ENCRYPTION            21
+#define IPMICONSOLE_ERR_SOL_REQUIRES_NO_ENCRYPTION         22
+#define IPMICONSOLE_ERR_BMC_BUSY                           23
+#define IPMICONSOLE_ERR_BMC_ERROR                          24
+#define IPMICONSOLE_ERR_INTERNAL_BMC_SETTINGS_INVALID      25
+#define IPMICONSOLE_ERR_SESSION_TIMEOUT                    26
+#define IPMICONSOLE_ERR_EXCESS_RETRANSMISSIONS             27
+#define IPMICONSOLE_ERR_OUT_OF_MEMORY                      28
+#define IPMICONSOLE_ERR_SYSTEM_ERROR                       29
+#define IPMICONSOLE_ERR_INTERNAL_ERROR                     30
+#define IPMICONSOLE_ERR_ERRNUMRANGE                        31
 
 /* 
  * IPMI Privilege Constants
